# finalfusion-rust

./: .gitignore  .travis.yml  CONTRIBUTORS  COPYRIGHT.md  Cargo.toml  FORMAT.md  NOTICE  README.md
.builds/: freebsd.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: rust.yml
benches/: array.rs  data.rs  fetch-data.sh  quantized.rs  subword.rs
ci/: after-success.sh  script.sh
finalfusion/: Cargo.toml
finalfusion-utils/: Cargo.toml
finalfusion-utils/src/: lib.rs
finalfusion/src/: io.rs  lib.rs  metadata.rs  prelude.rs  storage.rs  subword.rs  tests.rs  text.rs  word2vec.rs
rust2vec/: Cargo.toml
rust2vec-utils/: Cargo.toml
rust2vec-utils/src/: lib.rs
rust2vec/src/: embeddings.rs  io.rs  lib.rs  metadata.rs  prelude.rs  similarity.rs  storage.rs  tests.rs  text.rs  util.rs  vocab.rs  word2vec.rs
rust2vec/testdata/: similarity.nodims  similarity.r2v
src/: align.rs  embeddings.rs  error.rs  io.rs  lib.rs  metadata.rs  norms.rs  prelude.rs  similarity.rs  storage.rs  subword.rs  tests.rs  text.rs  util.rs  vocab.rs  word2vec.rs
src/chunks/: io.rs  metadata.rs  mod.rs  norms.rs  storage.rs  vocab.rs
src/chunks/storage/: array.rs  cow.rs  mod.rs  quantized.rs  wrappers.rs
src/chunks/vocab/: mod.rs  simple.rs  subword.rs  wrapper.rs  wrappers.rs
src/compat/: mod.rs  text.rs  word2vec.rs
src/compat/fasttext/: indexer.rs  io.rs  mod.rs
src/compat/floret/: indexer.rs  io.rs  mod.rs
src/fasttext/: indexer.rs  io.rs  mod.rs
testdata/: quantized.fifu  similarity.fifu  similarity.txt  utf8-incomplete.dims  utf8-incomplete.txt
