[package]
name = "finalfusion"
version = "0.11.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>", "Sebastian Pütz <seb.puetz@gmail.com>"]
description = "Reader and writer for common word embedding formats"
documentation = "https://docs.rs/finalfusion/"
keywords = ["embeddings", "word2vec", "glove", "finalfusion", "fasttext"]
homepage = "https://github.com/finalfusion/finalfusion-rust"
repository = "https://github.com/finalfusion/finalfusion-rust"
# Use after SPDX list is updated
# license = "BlueOak-1.0.0"
license-file = "LICENSE.md"
readme = "README.md"
exclude = [
  ".gitignore",
  ".travis.yml"
]

[dependencies]
byteorder = "1"
fnv = "1"
itertools = "0.8"
ndarray = "0.13"
ordered-float = "1"
rand = "0.7"
rand_xorshift = "0.2"
reductive = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.5"

[dependencies.memmap]
version = "0.7"
optional = true

[features]
default = ["memmap"]

[dev-dependencies]
approx = "0.3"
maplit = "1"
lazy_static = "1"
criterion = "0.3"

[[bench]]
name = "array"
harness = false

[[bench]]
name = "subword"
harness = false

[[bench]]
name = "quantized"
harness = false

