[package]
name = "finalfusion"
version = "0.14.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>", "Sebastian Pütz <seb.puetz@gmail.com>"]
description = "Reader and writer for common word embedding formats"
documentation = "https://docs.rs/finalfusion/"
keywords = ["embeddings", "word2vec", "glove", "finalfusion", "fasttext"]
homepage = "https://github.com/finalfusion/finalfusion-rust"
repository = "https://github.com/finalfusion/finalfusion-rust"
license = "Apache-2.0 OR BlueOak-1.0.0"
readme = "README.md"
exclude = [
  ".gitignore",
  ".travis.yml"
]

[dependencies]
byteorder = "1"
fnv = "1"
itertools = "0.10"
ndarray = "0.14"
ordered-float = "2"
rand = "0.8"
rand_xorshift = "0.3"
reductive = "0.6"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.5"

[dependencies.memmap2]
version = "0.3"
optional = true

[features]
default = ["memmap"]
memmap = ["memmap2"]

[dev-dependencies]
approx = "0.4"
criterion = "0.3"
lazy_static = "1"
maplit = "1"
tempfile = "3"

[[bench]]
name = "array"
harness = false

[[bench]]
name = "subword"
harness = false

[[bench]]
name = "quantized"
harness = false
