[package]
name = "finalfusion"
version = "0.17.1"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>", "Sebastian Pütz <seb.puetz@gmail.com>"]
description = "Reader and writer for common word embedding formats"
documentation = "https://docs.rs/finalfusion/"
keywords = ["embeddings", "word2vec", "glove", "finalfusion", "fasttext"]
homepage = "https://github.com/finalfusion/finalfusion-rust"
repository = "https://github.com/finalfusion/finalfusion-rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [
  ".gitignore",
  ".travis.yml"
]

[dependencies]
byteorder = "1"
fnv = "1"
itertools = "0.11"
murmur3 = "0.5"
ndarray = { version = "0.15", features = ["approx-0_5"] }
ordered-float = "4"
rand = "0.8"
rand_chacha = "0.3"
reductive = "0.9"
serde = { version = "1", features = ["derive"] }
smallvec = "1.7"
thiserror = "1"
toml = "0.5"

[dependencies.memmap2]
version = "0.9"
optional = true

[features]
default = ["memmap"]
memmap = ["memmap2"]

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
lazy_static = "1"
maplit = "1"
tempfile = "3"

[[bench]]
name = "array"
harness = false

[[bench]]
name = "subword"
harness = false

[[bench]]
name = "quantized"
harness = false
