[package]
name = "finalfusion-utils"
version = "0.5.1"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "finalfusion utilities"
documentation = "https://docs.rs/finalfusion/"
homepage = "https://github.com/finalfusion/finalfusion-rust"
repository = "https://github.com/finalfusion/finalfusion-rust"
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
clap = "2"
env_logger = "0.6"
failure = "0.1"
getopts = "0.2"
ndarray = "0.12"
num_cpus = "1"
rayon = "1"
reductive = "0.2"
finalfusion = { path = "../finalfusion", version = "0.5" }
stdinout = "0.4"
toml = "0.4"

[features]
default = []
opq = ["reductive/opq-train"]
